kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: healthcare-${ENVIRONMENT}
  labels:
    name: healthcare-${ENVIRONMENT}
    environment: ${ENVIRONMENT}
    team: lbg
